--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1804,7 +1804,7 @@
         font-size: 0.75rem;
         letter-spacing: 1.5px;
         padding: 0.5rem 1rem;
-        margin: 1rem auto 1.5rem;
+        margin: 1rem auto 0px;
     }
 }
 
